--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@
 </body>
 </html>
 <img src="images/myimage.jpg" alt="Description" width="300" />
+<img src="images/your-image.jpg" alt="Description">
