--- a/index.html
+++ b/index.html
@@ -21,3 +21,8 @@
 </html>
 
 <img src="images/your-image.jpg" alt="Description">
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
