--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </footer>
 </body>
 </html>
-
+<link rel="stylesheet" href="styles.css">
 <img src="images/your-image.jpg" alt="Description">
 <nav>
   <a href="index.html">Home</a>
