--- a/index.html
+++ b/index.html
@@ -27,3 +27,8 @@
   <a href="contact.html">Contact</a>
 </nav>
 <script src="script.js"></script>
+<head>
+  <meta name="description" content="This is a personal website hosted on GitHub Pages.">
+  <meta name="keywords" content="GitHub Pages, personal website, HTML">
+  <meta name="author" content="Your Name">
+</head>
