--- a/index.html
+++ b/index.html
@@ -32,3 +32,9 @@
   <meta name="keywords" content="GitHub Pages, personal website, HTML">
   <meta name="author" content="Your Name">
 </head>
+<form action="https://formspree.io/f/your-form-id" method="POST">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="_replyto" placeholder="Your Email" required>
+  <textarea name="message" placeholder="Your Message"></textarea>
+  <button type="submit">Send</button>
+</form>
