--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </body>
 </html>
 <link rel="stylesheet" href="styles.css">
-<img src="images/your-image.jpg" alt="Description">
+<img src="images/AC269CA5-25DC-4B53-9D53-9378CD4FE5DC.jpg" alt="Description">
 <nav>
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
