--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is a personal website hosted on GitHub Pages.">
+    <meta name="keywords" content="GitHub Pages, personal website, HTML">
+    <meta name="author" content="Your Name">
     <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -10,31 +13,24 @@
     <header>
         <h1>Welcome to My Website</h1>
     </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </nav>
     <main>
         <p>This is a simple website hosted on GitHub Pages.</p>
-        <img src="image.jpg" alt="Sample Image">
+        <img src="images/AC269CA5-25DC-4B53-9D53-9378CD4FE5DC.png" alt="Sample Image">
     </main>
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
     </footer>
+    <form action="https://formspree.io/f/your-form-id" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="_replyto" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message"></textarea>
+        <button type="submit">Send</button>
+    </form>
+    <script src="script.js"></script>
 </body>
 </html>
-<link rel="stylesheet" href="styles.css">
-<img src="images/AC269CA5-25DC-4B53-9D53-9378CD4FE5DC.png" alt="Description">
-<nav>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
-</nav>
-<script src="script.js"></script>
-<head>
-  <meta name="description" content="This is a personal website hosted on GitHub Pages.">
-  <meta name="keywords" content="GitHub Pages, personal website, HTML">
-  <meta name="author" content="Your Name">
-</head>
-<form action="https://formspree.io/f/your-form-id" method="POST">
-  <input type="text" name="name" placeholder="Your Name" required>
-  <input type="email" name="_replyto" placeholder="Your Email" required>
-  <textarea name="message" placeholder="Your Message"></textarea>
-  <button type="submit">Send</button>
-</form>
