--- a/index.html
+++ b/index.html
@@ -46,3 +46,8 @@
         <p>Manhwa Title 2</p>
     </div>
 </div>
+<nav>
+    <a href="index.html">Home</a>
+    <a href="manhwa.html">Manhwa</a>
+    <a href="about.html">About</a>
+</nav>
