--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>Popular Manhwa</h2>
                 <div class="manhwa-list">
                     <div class="manhwa-item">
-                        <img src="images/manhwa1.jpg" alt="Manhwa 1">
+                        <img src="images/IMG_3630.png" alt="Manhwa 1">
                         <p>Manhwa Title 1</p>
                     </div>
                     <div class="manhwa-item">
