--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <p>Manhwa Title 1</p>
                     </div>
                     <div class="manhwa-item">
-                        <img src="images/manhwa2.jpg" alt="Manhwa 2">
+                        <img src="images/IMG_3631.jpeg" alt="Manhwa 2">
                         <p>Manhwa Title 2</p>
                     </div>
                 </div>
