--- a/index.html
+++ b/index.html
@@ -12,3 +12,6 @@
     <script src="scripts/main.js"></script>
 </body>
 </html>
+<div id="manhwa-list">
+  <!-- سيتم توليد العناصر ديناميكيًا من JavaScript -->
+</div>
